--- a/app/src/main/res/menu/menu_lista_doses.xml
+++ b/app/src/main/res/menu/menu_lista_doses.xml
@@ -5,25 +5,13 @@
     <item
         android:id="@+id/action_nova_dose"
         android:icon="@drawable/ic_baseline_add_24"
-        android:title="@string/nova_dose"
+        android:title="Criar Dose"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_altera_dose"
+        android:id="@+id/action_altera_dosagem"
         android:icon="@android:drawable/ic_menu_edit"
-        android:title="Alterar Dose"
+        android:title="Alterar Dosagem"
         app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/action_altera_vacina"
-        android:title="Alterar Vacina" />
-    <item
-        android:id="@+id/action_altera_data"
-        android:title="Altera Data " />
-    <item
-        android:id="@+id/action_altera_profissionalsaude"
-        android:title="Altera Profissional de Saude" />
-    <item
-        android:id="@+id/action_altera_cargo"
-        android:title="Altera Cargo" />
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
