--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,14 +18,26 @@
         <action
             android:id="@+id/action_Lista_Utente_Fragment_to_Novo_Utente_Fragment"
             app:destination="@id/Novo_Utente_Fragment" />
+        <action
+            android:id="@+id/action_Lista_Utente_Fragment_to_Editar_Utente_Fragment"
+            app:destination="@id/Editar_Utente_Fragment" />
     </fragment>
     <fragment
         android:id="@+id/Novo_Utente_Fragment"
-        android:name="pt.ipg.covidapp.Novo_Utente_Fragment"
+        android:name="pt.ipg.covidapp.NovoUtenteFragment"
         android:label="fragment_novo__utente_"
         tools:layout="@layout/fragment_novo__utente_" >
         <action
             android:id="@+id/action_novo_Utente_Fragment_to_SecondFragment"
+            app:destination="@id/Lista_Utente_Fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/Editar_Utente_Fragment"
+        android:name="pt.ipg.covidapp.Editar_Utente_Fragment"
+        android:label="fragment_editar__utente_"
+        tools:layout="@layout/fragment_editar__utente_" >
+        <action
+            android:id="@+id/action_Editar_Utente_Fragment_to_Lista_Utente_Fragment"
             app:destination="@id/Lista_Utente_Fragment" />
     </fragment>
 </navigation>
