--- a/app/src/main/res/layout/fragment_lista_doses.xml
+++ b/app/src/main/res/layout/fragment_lista_doses.xml
@@ -8,7 +8,7 @@
     tools:context=".ListaDosesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewDoses"
+        android:id="@+id/recyclerViewUtentes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="@dimen/margem_ecra" />
