--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/Lista_Doses_Fragment">
+    app:startDestination="@id/ListaUtenteFragment">
 
     <fragment
         android:id="@+id/Lista_Doses_Fragment"
@@ -11,33 +11,42 @@
         android:label="@string/first_fragment_label"
         tools:layout="@layout/ListaUtentes"/>
     <fragment
-        android:id="@+id/Lista_Utente_Fragment"
+        android:id="@+id/ListaUtenteFragment"
         android:name="pt.ipg.covidapp.ListaUtentesFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_lista_utentes">
         <action
             android:id="@+id/action_Lista_Utente_Fragment_to_Novo_Utente_Fragment"
-            app:destination="@id/Novo_Utente_Fragment" />
+            app:destination="@id/NovoUtenteFragment" />
         <action
             android:id="@+id/action_Lista_Utente_Fragment_to_Editar_Utente_Fragment"
-            app:destination="@id/Editar_Utente_Fragment" />
+            app:destination="@id/EditarUtenteFragment" />
     </fragment>
     <fragment
-        android:id="@+id/Novo_Utente_Fragment"
+        android:id="@+id/NovoUtenteFragment"
         android:name="pt.ipg.covidapp.NovoUtenteFragment"
         android:label="fragment_novo__utente_"
         tools:layout="@layout/fragment_novo_utente" >
         <action
             android:id="@+id/action_novo_Utente_Fragment_to_SecondFragment"
-            app:destination="@id/Lista_Utente_Fragment" />
+            app:destination="@id/ListaUtenteFragment" />
     </fragment>
     <fragment
-        android:id="@+id/Editar_Utente_Fragment"
+        android:id="@+id/EditarUtenteFragment"
         android:name="pt.ipg.covidapp.Editar_Utente_Fragment"
         android:label="fragment_editar__utente_"
         tools:layout="@layout/fragment_editar_utente" >
         <action
             android:id="@+id/action_Editar_Utente_Fragment_to_Lista_Utente_Fragment"
-            app:destination="@id/Lista_Utente_Fragment" />
+            app:destination="@id/ListaUtenteFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/EliminarUtenteFragment"
+        android:name="pt.ipg.covidapp.EliminarUtenteFragment"
+        android:label="fragment_eliminar_utente"
+        tools:layout="@layout/fragment_eliminar_utente" >
+        <action
+            android:id="@+id/action_eliminarUtenteFragment_to_Lista_Utente_Fragment"
+            app:destination="@id/ListaUtenteFragment" />
     </fragment>
 </navigation>
