--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,6 +21,9 @@
         <action
             android:id="@+id/action_Lista_Utente_Fragment_to_Editar_Utente_Fragment"
             app:destination="@id/EditarUtenteFragment" />
+        <action
+            android:id="@+id/action_ListaUtenteFragment_to_EliminarUtenteFragment"
+            app:destination="@id/EliminarUtenteFragment" />
     </fragment>
     <fragment
         android:id="@+id/NovoUtenteFragment"
