Correção de erros e criado o layout EditarUtenteFragment.kt

--- a/app/src/main/res/menu/menu_lista_utentes.xml
+++ b/app/src/main/res/menu/menu_lista_utentes.xml
@@ -16,6 +16,9 @@
         android:id="@+id/action_apagar_utente"
         android:title="@string/eliminar_utente" />
     <item
+        android:id="@+id/action_nova_dose"
+        android:title="Nova Dose" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
