É possível eliminar um utente existente ou editá lo

--- a/app/src/main/res/layout/fragment_eliminar_utente.xml
+++ b/app/src/main/res/layout/fragment_eliminar_utente.xml
@@ -1,14 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EliminarUtenteFragment">
+    android:orientation="vertical"
+    tools:context=".EliminarUtenteFragment" >
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/textViewNomeUt"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margem_ecra"
+        android:layout_marginLeft="@dimen/margem_ecra"
+        android:layout_marginTop="@dimen/margem_ecra"
+        android:layout_marginEnd="@dimen/margem_ecra"
+        android:layout_marginRight="@dimen/margem_ecra"
+        android:text="@string/nome"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/cor_destaque" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/textViewNomeApaga"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margem_ecra"
+        android:layout_marginLeft="@dimen/margem_ecra"
+        android:layout_marginTop="@dimen/margem_campos"
+        android:layout_marginEnd="@dimen/margem_ecra"
+        android:layout_marginRight="@dimen/margem_ecra"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        tools:text="António" />
+
+    <TextView
+        android:id="@+id/textViewDosesAdmin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margem_ecra"
+        android:layout_marginLeft="@dimen/margem_ecra"
+        android:layout_marginTop="@dimen/margem_campos"
+        android:layout_marginEnd="@dimen/margem_ecra"
+        android:layout_marginRight="@dimen/margem_ecra"
+        android:text="Doses Administradas"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/cor_destaque" />
+
+    <TextView
+        android:id="@+id/textViewDosesApaga"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margem_ecra"
+        android:layout_marginLeft="@dimen/margem_ecra"
+        android:layout_marginTop="@dimen/margem_campos"
+        android:layout_marginEnd="@dimen/margem_ecra"
+        android:layout_marginRight="@dimen/margem_ecra"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        tools:text="2" />
+
+    <TextView
+        android:id="@+id/textViewId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margem_ecra"
+        android:layout_marginLeft="@dimen/margem_ecra"
+        android:layout_marginTop="@dimen/margem_campos"
+        android:layout_marginEnd="@dimen/margem_ecra"
+        android:layout_marginRight="@dimen/margem_ecra"
+        android:text="Idade"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/cor_destaque" />
+
+    <TextView
+        android:id="@+id/textViewEmailApaga"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margem_ecra"
+        android:layout_marginLeft="@dimen/margem_ecra"
+        android:layout_marginTop="@dimen/margem_campos"
+        android:layout_marginEnd="@dimen/margem_ecra"
+        android:layout_marginRight="@dimen/margem_ecra"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        tools:text="22" />
+
+    <TextView
+        android:id="@+id/textViewDn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margem_ecra"
+        android:layout_marginLeft="@dimen/margem_ecra"
+        android:layout_marginTop="@dimen/margem_campos"
+        android:layout_marginEnd="@dimen/margem_ecra"
+        android:layout_marginRight="@dimen/margem_ecra"
+        android:text="@string/data_nascimento"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:textColor="@color/cor_destaque" />
+
+    <TextView
+        android:id="@+id/textViewDataNascimentoApaga"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margem_ecra"
+        android:layout_marginLeft="@dimen/margem_ecra"
+        android:layout_marginTop="@dimen/margem_campos"
+        android:layout_marginEnd="@dimen/margem_ecra"
+        android:layout_marginRight="@dimen/margem_ecra"
+        tools:text="Aventura"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+</LinearLayout>
