criado o fragment_criar_cargo.xml

--- a/app/src/main/res/layout/fragment_criar_cargo.xml
+++ b/app/src/main/res/layout/fragment_criar_cargo.xml
@@ -16,22 +16,8 @@
             android:id="@+id/editTextCriarCargo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/nome_da_vacina"
+            android:hint="@string/novo_cargo"
             android:inputType="textLongMessage|textAutoComplete" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editTextQnt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margem_campos"
-                android:hint="@string/quantidade"
-                android:inputType="number" />
-
-        </com.google.android.material.textfield.TextInputLayout>
 
     </com.google.android.material.textfield.TextInputLayout>
 
