--- a/app/src/main/res/menu/menu_ver_vacinas.xml
+++ b/app/src/main/res/menu/menu_ver_vacinas.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="pt.ipg.covidapp.MainActivity">
     <item
-        android:id="@+id/action_novo_profissional_saude"
+        android:id="@+id/action_nova_vacina"
         android:icon="@drawable/ic_baseline_add_24"
         android:title="@string/nova_vacina"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_editar_profissional_saude"
+        android:id="@+id/action_editar_vacina"
         android:icon="@android:drawable/ic_menu_edit"
         android:title="@string/editar_vacina"
         app:showAsAction="ifRoom" />
