--- a/app/src/main/res/layout/fragment_menu_principal.xml
+++ b/app/src/main/res/layout/fragment_menu_principal.xml
@@ -19,7 +19,7 @@
         tools:text="CovidApp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonUtente"
         android:layout_width="118dp"
         android:layout_height="54dp"
         android:layout_marginTop="104dp"
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonDoses"
         android:layout_width="118dp"
         android:layout_height="54dp"
         android:layout_marginTop="44dp"
@@ -40,10 +40,10 @@
         android:text="@string/doses"
         app:backgroundTint="#DD2B2B"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonUtente" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonVacinas"
         android:layout_width="118dp"
         android:layout_height="54dp"
         android:layout_marginTop="44dp"
@@ -52,10 +52,10 @@
         android:text="@string/vacinas"
         app:backgroundTint="#DD2B2B"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonDoses" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/buttonProfissionalSaude"
         android:layout_width="145dp"
         android:layout_height="58dp"
         android:layout_marginTop="44dp"
@@ -64,5 +64,5 @@
         android:text="@string/profissional_de_sa_de"
         app:backgroundTint="#DD2B2B"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonVacinas" />
 </androidx.constraintlayout.widget.ConstraintLayout>
