--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/VerVacinasFragment">
+    app:startDestination="@id/MenuPrincipalFragment">
 
     <fragment
         android:id="@+id/Lista_Doses_Fragment"
