criado o fragment para CriarProfissionalSaudeFragment.kt

--- a/app/src/main/res/layout/fragment_criar_profissional_saude.xml
+++ b/app/src/main/res/layout/fragment_criar_profissional_saude.xml
@@ -13,7 +13,7 @@
         android:layout_margin="@dimen/margem_ecra">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editTextTitulo"
+            android:id="@+id/editTextNomeP"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/nome"
