--- a/app/src/main/res/menu/menu_lista_utentes.xml
+++ b/app/src/main/res/menu/menu_lista_utentes.xml
@@ -19,6 +19,9 @@
         android:id="@+id/action_nova_dose"
         android:title="Nova Dose" />
     <item
+        android:id="@+id/action_menu_princial"
+        android:title="@string/menu_principal" />
+    <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
